feat: make api delete post
